--- a/Frontend/src/components/header.css
+++ b/Frontend/src/components/header.css
@@ -1,3 +1,9 @@
+.App-header {
+    width: 100%;
+    margin-bottom: 25px;
+    padding: 10px 0;
+}
+
 img {
     background-size: cover;
     width: 100%;
